--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-reveal": "^1.2.2",
-    "react-scroll": "^1.8.6"
+    "react-scroll": "^1.8.6",
+    "react-typed": "^1.2.0",
+    "react-typist": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.30",
