--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "anjs",
     "Complet",
     "Coutdown",
     "fontsource",
@@ -7,6 +8,7 @@
     "Gadient",
     "gtag",
     "hotjar",
+    "imageoptimization",
     "lpbarretolobato",
     "LZQTF",
     "maxinelobato",
