--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
   "cSpell.words": [
     "anjs",
+    "backdroptech",
+    "chakraui",
     "Complet",
     "Coutdown",
+    "Favourites",
     "fontsource",
     "fpixel",
     "Gadient",
@@ -12,6 +15,7 @@
     "lpbarretolobato",
     "LZQTF",
     "maxinelobato",
+    "Networker",
     "pageview",
     "Prospecção",
     "queridinha",
